tests/baselines/reference/tsxElementResolution5.errors.txt
tests/cases/conformance/jsx/tsxElementResolution5.tsx(6,2): error TS2304: Cannot find name 'div'.


==== tests/cases/conformance/jsx/tsxElementResolution5.tsx (1 errors) ====
    declare module JSX {
    	interface Element { }
    }
    
    // Error
    <div n='x' />;
     ~~~
!!! error TS2304: Cannot find name 'div'.
    